src/main/openshift/knative-service-with-autoscaling.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: feedback-form
  namespace: deep-dive-quarkus
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "0"
        autoscaling.knative.dev/max-scale: "5"
    spec:
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/deep-dive-quarkus/feedback-form:0.1
          env:
            - name: kafka-bootstrap-servers
              valueFrom:
                secretKeyRef:
                  key: kafka.bootstrap.servers
                  name: kafka-config
            - name: kafka-sasl-jaas-config
              valueFrom:
                secretKeyRef:
                  key: sasl.jaas.config
                  name: feedback-user
            - name: oidc-client-id
              valueFrom:
                secretKeyRef:
                  key: CLIENT_ID
                  name: keycloak-client-secret-feedback-form-client
            - name: oidc-client-secret
              valueFrom:
                secretKeyRef:
                  key: CLIENT_SECRET
                  name: keycloak-client-secret-feedback-form-client
            - name: oidc-auth-url
              value: "https://keycloak-deep-dive-quarkus.apps.ocp4.klaassen.click/auth/"
            - name: VERSION
              value: '0.1'
