src/main/openshift/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: feedback-form
  namespace: serverless-demo
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "0"
        autoscaling.knative.dev/max-scale: "5"
    spec:
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/serverless-demo/feedback-form:latest
          env:
            - name: kafka-bootstrap-servers
              valueFrom:
                secretKeyRef:
                  key: kafka.bootstrap.servers
                  name: kafka-config
            - name: kafka-sasl-jaas-config
              valueFrom:
                secretKeyRef:
                  key: sasl.jaas.config
                  name: feedback-user
