src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-form
  namespace: serverless-demo
spec:
  selector:
    app: feedback-form
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
