src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: feedback-form
  namespace: serverless-demo
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: feedback-form.apps.ocp4.klaassen.click
  to:
    kind: Service
    name: feedback-form
  tls:
    termination: "edge"
